[package]
name = "total-perspective-vortex"
version = "0.3.0"
authors = ["Scott <scottapotamas@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
image = "0.22.1"
colorsys = "0.5.3"
walkdir = "2"
itertools = "0.8.0"
rand = "0.7.2"