[package]
name = "total-perspective-vortex"
version = "0.2.0"
authors = ["Scott <scottapotamas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.22.1"
colorsys = "0.5.3"
walkdir = "2"
